# cratos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PRD.md  PROGRESS_BACKEND_B.md  PROGRESS_BACKEND_D.md  README.ko.md  README.md  check_output.txt  check_output_2.txt  docker-compose.test.yml  docker-compose.yml  gap_analysis.skill.json  mise.toml  pre_prd.md  result-persona-fix.md  result-skills-integration.md  session-coordinate-pro.md  spawn_p0.sh
.agent/: mcp.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs  voice.rs  websocket.rs
apps/web/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js
apps/web/src/: app.rs  lib.rs  main.rs
apps/web/src/api/: client.rs  mod.rs  websocket.rs
apps/web/src/components/: card.rs  chart.rs  code_block.rs  diagram.rs  markdown.rs  message.rs  mod.rs
apps/web/src/pages/: chat.rs  dashboard.rs  docs.rs  history.rs  history_detail.rs  memory.rs  mod.rs  personas.rs  settings.rs  tools.rs
apps/web/style/: tailwind.css
crates/cratos-audio/: Cargo.toml
crates/cratos-audio/src/: config.rs  controller.rs  error.rs  input.rs  lib.rs  output.rs  stt.rs  tts.rs  wake_word.rs  whisper_local.rs
crates/cratos-audio/src/tts/: backend.rs  config.rs  edge.rs  elevenlabs.rs  error.rs  manager.rs  mod.rs  rate_limit.rs  secret.rs
crates/cratos-canvas/: Cargo.toml
crates/cratos-canvas/src/: document.rs  error.rs  events.rs  lib.rs  protocol.rs  renderer.rs  session.rs  store.rs  websocket.rs  websocket_tests.rs
crates/cratos-canvas/src/a2ui/: mod.rs  protocol.rs  security.rs  security_tests.rs  session.rs
crates/cratos-canvas/src/tests/: websocket.rs
crates/cratos-channels/: Cargo.toml
crates/cratos-channels/src/: discord.rs  error.rs  lib.rs  matrix.rs  message.rs  slack.rs  telegram.rs  util.rs  whatsapp.rs  whatsapp_business.rs
crates/cratos-channels/src/discord/: adapter.rs  commands.rs  config.rs  handler.rs  mod.rs
crates/cratos-channels/src/matrix/: config.rs
crates/cratos-channels/src/slack/: api.rs  events.rs  formatting.rs  mod.rs  tests.rs
crates/cratos-channels/src/telegram/: adapter.rs  audio_utils.rs  channel_impl.rs  commands.rs  config.rs  handler.rs  mod.rs  tests.rs
crates/cratos-channels/src/twitter/: adapter.rs  config.rs  mod.rs
crates/cratos-channels/src/whatsapp/: mod.rs
crates/cratos-core/: Cargo.toml
crates/cratos-core/src/: a2a.rs  approval.rs  auth.rs  credentials.rs  dev_sessions.rs  device_auth.rs  discovery.rs  error.rs  event_bus.rs  external_auth.rs  lib.rs  nodes.rs  olympus_hooks.rs  orchestrator.rs  pairing.rs  permissions.rs  planner.rs  queue.rs  session_manager.rs  shutdown.rs  telemetry.rs  tool_policy.rs
crates/cratos-core/src/a2a/: tests.rs
crates/cratos-core/src/agents/: cli_registry.rs  config.rs  mod.rs  orchestrator.rs  persona_routing.rs
crates/cratos-core/src/approval/: manager.rs  mod.rs  tests.rs  traits.rs  types.rs
crates/cratos-core/src/auth/: tests.rs
crates/cratos-core/src/chronicles/: mod.rs  record.rs  store.rs  tests.rs
crates/cratos-core/src/credentials/: backend.rs  credential.rs  encrypted_file.rs  error.rs  keychain.rs  mod.rs  secret_service.rs  secure_string.rs  store.rs  tests.rs  windows.rs
crates/cratos-core/src/decrees/: enforcer.rs  laws.rs  loader.rs  mod.rs  ranks.rs  warfare.rs
crates/cratos-core/src/dev_sessions/: tests.rs
crates/cratos-core/src/device_auth/: tests.rs
crates/cratos-core/src/discovery/: tests.rs
crates/cratos-core/src/error/: tests.rs
crates/cratos-core/src/event_bus/: bus.rs  mod.rs  tests.rs  types.rs
crates/cratos-core/src/external_auth/: tests.rs
crates/cratos-core/src/memory/: cache.rs  mod.rs  persistent.rs  redis_store.rs  session.rs  sqlite_store.rs  store.rs  working.rs
crates/cratos-core/src/nodes/: crypto.rs  mod.rs  registry.rs  types.rs
crates/cratos-core/src/olympus_hooks/: tests.rs
crates/cratos-core/src/orchestrator/: config.rs  core.rs  helpers.rs  mod.rs  multi_persona.rs  planning.rs  post_execution.rs  process.rs  result_builder.rs  routing.rs  sanitize.rs  session_context.rs  tests.rs  tool_execution.rs  types.rs
crates/cratos-core/src/pairing/: tests.rs
crates/cratos-core/src/pantheon/: active_persona.rs  domain.rs  loader.rs  mod.rs  preset.rs  tests.rs
crates/cratos-core/src/permissions/: tests.rs
crates/cratos-core/src/planner/: tests.rs
crates/cratos-core/src/prompts/: default_system_prompt.md
crates/cratos-core/src/queue/: tests.rs
crates/cratos-core/src/scheduler/: engine.rs  mod.rs  store.rs  triggers.rs  types.rs
crates/cratos-core/src/security/: audit.rs  injection.rs  mod.rs
crates/cratos-core/src/session_manager/: tests.rs
crates/cratos-core/src/shutdown/: tests.rs
crates/cratos-core/src/steering/: context.rs  handle.rs  mod.rs  tests.rs  types.rs
crates/cratos-core/tests/: pantheon_integration.rs  steering_test.rs
crates/cratos-crypto/: Cargo.toml
crates/cratos-crypto/src/: lib.rs
crates/cratos-llm/: Cargo.toml
crates/cratos-llm/src/: anthropic.rs  cli_auth.rs  completion.rs  cost.rs  deepseek.rs  embeddings.rs  error.rs  fireworks.rs  gemini.rs  gemini_auth.rs  gemini_quota.rs  glm.rs  groq.rs  lib.rs  message.rs  moonshot.rs  novita.rs  oauth.rs  oauth_config.rs  ollama.rs  openai.rs  openrouter.rs  quota.rs  qwen.rs  router.rs  siliconflow.rs  token.rs  tools.rs  util.rs
crates/cratos-memory/: Cargo.toml
crates/cratos-memory/src/: bridge.rs  decomposer.rs  error.rs  extractor.rs  indexer.rs  lib.rs  retriever.rs  scorer.rs  store.rs  types.rs
crates/cratos-replay/: Cargo.toml
crates/cratos-replay/src/: error.rs  event.rs  lib.rs  search.rs  store.rs  viewer.rs
crates/cratos-search/: Cargo.toml
crates/cratos-search/src/: error.rs  index.rs  lib.rs
crates/cratos-tools/: Cargo.toml
crates/cratos-tools/src/: doctor.rs  error.rs  lib.rs  registry.rs  runner.rs  sandbox.rs
crates/cratos-tools/tests/: browser_tests.rs
(+660 files in other folders)
