[workspace]
resolver = "2"
members = [
    "crates/cratos-core",
    "crates/cratos-channels",
    "crates/cratos-tools",
    "crates/cratos-llm",
    "crates/cratos-replay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Cratos Team"]
repository = "https://github.com/cratos/cratos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Channels
teloxide = { version = "0.12", features = ["macros"] }
slack-morphism = { version = "2.0", features = ["hyper"] }

# LLM
async-openai = "0.18"
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Internal crates
cratos-core = { path = "crates/cratos-core" }
cratos-channels = { path = "crates/cratos-channels" }
cratos-tools = { path = "crates/cratos-tools" }
cratos-llm = { path = "crates/cratos-llm" }
cratos-replay = { path = "crates/cratos-replay" }

[package]
name = "cratos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cratos"
path = "src/main.rs"

[dependencies]
cratos-core.workspace = true
cratos-channels.workspace = true
cratos-tools.workspace = true
cratos-llm.workspace = true
cratos-replay.workspace = true

tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
serde.workspace = true
sqlx.workspace = true
redis.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
cratos-core.workspace = true
cratos-channels.workspace = true
cratos-tools.workspace = true
cratos-llm.workspace = true
cratos-replay.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
