[workspace]
resolver = "2"
members = [
    "crates/cratos-core",
    "crates/cratos-channels",
    "crates/cratos-tools",
    "crates/cratos-llm",
    "crates/cratos-replay",
    "crates/cratos-skills",
    "crates/cratos-search",
    "crates/cratos-audio",
    "crates/cratos-canvas",
    "crates/cratos-crypto",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Cratos Team"]
repository = "https://github.com/cratos/cratos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }
redis = { version = "1.0", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Channels
teloxide = { version = "0.17", features = ["macros"] }
slack-morphism = { version = "2.0", features = ["hyper"] }
serenity = { version = "0.12", features = ["client", "gateway", "model"] }

# LLM
async-openai = "0.32"
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Additional utilities
regex = "1.10"
dirs = "5.0"

# Embeddings & Vector Search (tract = pure Rust, no C++ linking issues)
tract-onnx = "0.22"
tokenizers = { version = "0.22", default-features = false, features = ["http", "fancy-regex"] }
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
usearch = "2"

# Local ML inference (candle = pure Rust, no C++ dependencies)
candle-core = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }

# Internal crates
cratos-core = { path = "crates/cratos-core" }
cratos-channels = { path = "crates/cratos-channels" }
cratos-tools = { path = "crates/cratos-tools" }
cratos-llm = { path = "crates/cratos-llm" }
cratos-replay = { path = "crates/cratos-replay" }
cratos-skills = { path = "crates/cratos-skills" }
cratos-search = { path = "crates/cratos-search" }
cratos-audio = { path = "crates/cratos-audio" }
cratos-canvas = { path = "crates/cratos-canvas" }
cratos-crypto = { path = "crates/cratos-crypto" }

# Cryptography (E2E encryption + device auth)
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# Audio
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"
ort = { version = "2.0.0-rc.5", features = ["download-binaries"] }
ndarray = "0.15"
ringbuf = "0.3"
base64 = "0.21"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["std"] }

[package]
name = "cratos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "cratos"
path = "src/main.rs"

[dependencies]
cratos-core.workspace = true
cratos-channels.workspace = true
cratos-tools.workspace = true
cratos-llm = { workspace = true, features = ["embeddings"] }
cratos-replay = { workspace = true, features = ["search"] }
cratos-skills = { workspace = true, features = ["semantic"] }
cratos-search.workspace = true

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
unicode-width = "0.2"
config.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
serde.workspace = true
redis.workspace = true
async-trait.workspace = true
chrono.workspace = true

clap = { version = "4", features = ["derive"] }
inquire = "0.9"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
dirs.workspace = true
reqwest.workspace = true
serde_json.workspace = true
uuid.workspace = true
futures-util = "0.3"
regex = { workspace = true }

[dev-dependencies]
tokio-test.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
cratos-core.workspace = true
cratos-channels.workspace = true
cratos-tools.workspace = true
cratos-llm.workspace = true
cratos-replay.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
