[package]
name = "cratos-web"
description = "Cratos Web Dashboard - Pure Rust UI powered by Leptos"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

# This package is separate from the main workspace (WASM-specific)
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cratos-web"
path = "src/main.rs"

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
leptos_meta = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }

# HTTP client for WASM
gloo-net = "0.5"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-console = "0.3"
gloo-storage = "0.3"
gloo-utils = "0.2"

# Markdown rendering (WASM compatible)
pulldown-cmark = "0.10"

# URL encoding for diagrams
base64 = "0.21"
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

[package.metadata.leptos]
# The name used by wasm-bindgen/wasm-pack
output-name = "cratos-web"
# Site root path
site-root = "target/site"
# Site pkg path
site-pkg-dir = "pkg"
# Style file
style-file = "style/output.css"
# Tailwind
tailwind-input-file = "style/tailwind.css"
tailwind-config-file = "tailwind.config.js"
# Watched files
watch = true
# Build command
browserquery = "defaults"
# Server info (for SSR mode, optional)
site-addr = "127.0.0.1:3000"
reload-port = 3001
# Env
env = "DEV"
