[package]
name = "cratos-channels"
description = "Channel adapters (Telegram, Slack) for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cratos-core.workspace = true

tokio.workspace = true
teloxide.workspace = true
slack-morphism.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Security - Slack request signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
