[package]
name = "cratos-channels"
description = "Channel adapters (Telegram, Slack) for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
audio = ["cratos-audio"]

[dependencies]
cratos-core.workspace = true
cratos-llm.workspace = true
cratos-audio = { workspace = true, optional = true }

tokio.workspace = true
tokio-util.workspace = true
teloxide.workspace = true
slack-morphism.workspace = true
serenity.workspace = true
reqwest.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
async-trait.workspace = true

# Security - Slack request signature verification
hmac = "0.12.1"
sha2 = "0.10"
hex = "0.4"

# Matrix support (no sqlite to avoid libsqlite3-sys conflict with sqlx)
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls", "markdown"] }
url = "2.5"
mime = "0.3"

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
