[package]
name = "cratos-core"
description = "Core orchestration engine for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cratos-llm.workspace = true
cratos-tools.workspace = true
cratos-replay.workspace = true

tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
redis.workspace = true
regex.workspace = true
futures.workspace = true

# Telemetry
toml = "0.8"        # Config file parsing
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Credential security
# keyring = "3.0"     # OS keychain (enable when needed)
zeroize = { version = "1.8", features = ["derive"] }  # Cryptographic memory wiping
subtle = "2.5"  # Constant-time comparison for secrets
aes-gcm = "0.10"    # AES-256-GCM encryption for EncryptedFile backend
rand = "0.8"        # Secure random nonce generation
base64 = "0.22"     # Encoding encrypted data
sha2 = "0.10"       # Key derivation from master password
dirs = "5.0"        # Platform-specific directories for storing encrypted file
hostname = "0.4"    # Machine-specific key derivation fallback

[features]
default = []
redis-tests = []  # Enable Redis integration tests (requires running Redis)

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
tempfile = "3.10"
