[package]
name = "cratos-core"
description = "Core orchestration engine for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cratos-llm.workspace = true
cratos-memory.workspace = true
cratos-skills = { path = "../cratos-skills" }
cratos-tools.workspace = true
cratos-replay.workspace = true

tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
redis.workspace = true
regex.workspace = true
futures.workspace = true

# Telemetry
toml = "0.8"        # Config file parsing
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Credential security
keyring = { version = "3.6", optional = true }  # Cross-platform keychain (Linux Secret Service, Windows Credential Manager)
zeroize = { version = "1.8", features = ["derive"] }  # Cryptographic memory wiping

# Concurrent collections
dashmap = "6"

# Scheduler
tokio-cron-scheduler = "0.13"  # Cron scheduling (disabled for now, using simplified impl)
subtle = "2.5"  # Constant-time comparison for secrets
ed25519-dalek = { workspace = true }  # Device authentication (Ed25519 signatures)
aes-gcm = "0.10"    # AES-256-GCM encryption for EncryptedFile backend
rand = "0.8"        # Secure random nonce generation
base64 = "0.22"     # Encoding encrypted data
sha2 = "0.10"       # Key derivation from master password
dirs = "5.0"        # Platform-specific directories for storing encrypted file
hostname = "0.4"    # Machine-specific key derivation fallback
mdns-sd = { version = "0.11", optional = true }  # mDNS service discovery for LAN pairing

[features]
default = []
redis-tests = []  # Enable Redis integration tests (requires running Redis)
native-keyring = ["dep:keyring"]  # Enable native OS keyring (Linux Secret Service, Windows Credential Manager)
embeddings = ["cratos-memory/embeddings"]  # Enable embedding-based Graph RAG search
mdns = ["dep:mdns-sd"]  # Enable mDNS service discovery for LAN device pairing

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
tempfile = "3.10"
