[package]
name = "cratos-search"
description = "Vector search and semantic indexing for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Vector index
usearch.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
dirs.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
tempfile = "3.10"
