[package]
name = "cratos-tools"
description = "Tool registry and execution engine for Cratos AI assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cratos-llm.workspace = true

tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true

# Security - URL validation and encoding
url = "2.5"
urlencoding = "2.1"

# Base64 encoding for binary file handling
base64.workspace = true

# HTML parsing for web search
regex.workspace = true

# Configuration parsing (for browser config tests)
toml = "0.8"

# Home directory detection
dirs = "5"

# PTY-based bash execution
pty-process = { version = "0.5", features = ["async"] }
cratos-canvas = { version = "0.1.4", path = "../cratos-canvas" }

# Docker sandbox (bollard for Docker API)
# bollard = "0.18"  # Enable when Docker sandbox is fully implemented

[dev-dependencies]
mockall.workspace = true
tokio-test.workspace = true
tempfile = "3"
